<resources>
    <string name="app_name">Flip Flash Cards</string>
    <string name="facebook_app_id">905454096190039</string>
    <string name="parse_app_id">LWnSvs6XkYqzdKd07QKowViu8axdnwsHJIpFb4gO</string>
    <string name="parse_client_key">bVGvephS1FlkuePH7Yv6GrsQmfvNDW75mKN67Ssk</string>
    <string name="dropbox__app_key">db-656kygg6ny4d7l6</string>
    <string name="parse_twitter_key">uptcC5DVVmMPE25rwNDoVyG7q</string>
    <string name="parse_twitter_secret">ciAdhaC2lF1hkZqnYmfoUowcBhnQN2rfcYuKoV7D9ImK8tWZzo</string>
    <string name="lvl_public_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAh35nQt2ttqMr0RsfhS3vqDQiaaBnNLyZ3n20owNpzGMOAClyK7UpST2MALzZT7G3pOwGuxQB7fHUPXDeI4ZVrcPB0m0ZeBwJ+5xe3isxdwQMVkZkAFJnCsfrthAjBUBvxJ1w/RX8HyQs9Pqts3XVZRiDu3Pc3RVwmIjQUx8Kksoy8ks79BLmed3Ar9tG+JVjWuOtUzoGQz+1LjetNVQlg7wfLXQuGfDT+k+rO/lt62SyPr0bSS4Fj6JwBlBN8f7fM2x44/UFQV0w/zwGnDJrSLP/bMD5UJ2rXBnbJe3D0gaSK9OBg1wuSbIUrUES8FDImju3ZqxyS16pFFQKLU8qvQIDAQAB</string>
    <string name="aws_identity_pool_id">us-east-1:19efa782-177f-476a-a62b-c504d5ddcd76</string>
    <string name="DIALOG_TITLE_NO_NETWORK">No internet connection</string>
    <string name="DIALOG_PLEASE_CHECK_YOUR_NETWORK">Please check your internet settings.</string>
    <string name="DIALOG_DOWNLOAD_PACK">Downloading Flip Flash Cards Sample Cards</string>
    <string name="DIALOG_DOWNLOAD_PACK_FROM_FRIENDS">Downloading pack from </string>
    <string name="DIALOG_YOU_CAN_NOT_CHANGE_TEMPLATE_BACKGROUND">You can only make changes to cards you have created yourself.</string>
    <string name="DIALOG_EXISTING_PACK_NAME">Existing pack name, please input a different one</string>
    <string name="SAVE_NOT_AVAILABLE_THAT_IS_NOT_YOU">You cannot save current card you haven\'t created yourself.</string>
    <string name="NOT_ALLOW_CREATE_CARD_THAT_IS_NOT_YOU">You cannot create a card in pack you haven\'t created yourself.</string>
    <string name="DIALOG_NEED_TO_CREATE_PACK_FIRST">Create a group first before creating a new card</string>
    <string name="DIALOG_ENTER_VALID_URL">Input a valid URL/Email</string>
    <string name="DIALOG_APPLY_TO_ALL_CARD">Apply to all cards...</string>
    <string name="DIALOG_SET_PASSWORD">Set a password?</string>
    <string name="DIALOG_ENTER_PASSWORD">Enter a password</string>
    <string name="DIALOG_AlERT">Alert</string>
    <string name="DIALOG_CLOSE">Close</string>
    <string name="DIALOG_OK">OK</string>
    <string name="DIALOG_SET">Set</string>
    <string name="DIALOG_CANCEL">Cancel</string>
    <string name="DIALOG_DONE">Done</string>
    <string name="DIALOG_ERROR">Error</string>
    <string name="DIALOG_SHARE">Share</string>
    <string name="DIALOG_SET_MAX_NUMBER_OF_DOWNLOADS">Set max number of downloads</string>
    <string name="DIALOG_WRONG_PASSWORD">Wrong password</string>
    <string name="DIALOG_DELETE_PACK">Are you sure you want to delete?</string>
    <string name="DIALOG_DELETE_CARD">Are you sure you want to delete?</string>
    <string name="DIALOG_FAIL_TO_LOG_DROPBOX">Disconnected from Dropbox</string>
    <string name="DIALOG_DOWNLOAD_LINK_ERROR">Unable to download. Please check you have the correct code and please check your internet connection.</string>
    <string name="DIALOG_CREATE_ZIPPED_SHARE_FILE_FAILED">Failure to create zipped share file.</string>
    <string name="DIALOG_ENCRPT_ZIPPED_SHARE_FILED_FAILED">Failure to encrypt zipped share file.</string>
    <string name="DIALOG_REDIRECT_SERVICE_UNAVAILABLE">Redirect service is not available now, please try again</string>
    <string name="DIALOG_WARN">Warning</string>
    <string name="DIALOG_PACK_IS_BEING_USED">The pack is currently being used</string>
    <string name="DIALOG_SHARE_FUNCTION_FORBIDDEN_BY_CREATOR">Share function is forbidden by the pack creator</string>
    <string name="DIALOG_IMAGE_VIDEO_SELECTION">Image/video/video link selection</string>
    <string name="DIALOG_IMAGE_SELECTION">Image selection</string>
    <string name="DIALOG_PACK_LIST_IMAGE_SELECTION">Pack list image selection</string>
    <string name="DIALOG_LOGO_IMAGE_SELECTION">Logo image selection</string>
    <string name="DIALOG_BACKGROUND_IMAGE_SELECTION">Background image selection</string>
    <string name="DIALOG_INSERT_YOUTUBE_URL">Insert a YouTube url</string>
    <string name="DIALOG_SELECT_FROM_LIBRARY">Select from library</string>
    <string name="DIALOG_REMOVE_VIDEO_IMAGE">Remove video/image</string>
    <string name="DIALOG_REMOVE_IMAGE">Remove image</string>
    <string name="DIALOG_REMOVE_LOGO_IMAGE">Remove logo image</string>
    <string name="DIALOG_INVALID_YOUTUBE_URL">Invalid YouTube url, it must be a full url - for example: http://www.youtube.com/watch?v=3-EaGGPGiJY</string>
    <string name="DIALOG_ARE_YOU_SURE_YOU_WANT_TO_EXIT">Are you sure you want to exit?</string>
    <string name="DIALOG_SELECT_CARD_BEFOREHAND">You need to select a card first</string>
    <string name="DIALOG_SELECT_PACK_BEFOREHAND">You need to select a pack first</string>
    <string name="DIALOG_NO_CARD_AVAILABLE">No card available</string>
    <string name="DIALOG_NOT_SUPPORTED">Not supported</string>
    <string name="DIALOG_NO_AUDIO_ON_QUESTION_CARD"> There is no audio on the question card></string>
    <string name="DIALOG_NO_AUDIO_ON_ANSWER_CARD"> There is no audio on the answer card></string>
    <string name="DIALOG_SET_MAIL_ADDRESS"> Please set your mail address!></string>
    <string name="DIALOG_INCORRECT_URL_OR_EMAIL"> Incorrect URL or Email format></string>
    <string name="DIALOG_VIDEO_PLAY_ONLY_AVAILABLE_IN_PLAY">Video play is only available in play mode </string>
    <string name="DIALOG_POST_FACEBOOK_SUCCESSFULLY">Posted to Facebook successfully</string>
    <string name="DIALOG_NO_ADMIN_PASSWORD_WARNING">No admin password set. Setting an admin password allows you to edit this pack on on another device, or retrieve your editing rights on a pack that has been deleted off the device.</string>
    <string name="DIALOG_NO_FACEBOOK">No Facebook Account</string>
    <string name="DIALOG_NO_FACEBOOK_DETAIL">There are no Facebook accounts configured. You can add or create a Facebook account in Settings</string>
    <string name="DIALOG_NO_Twitter">No Twitter Account</string>
    <string name="DIALOG_NO_TWITTER_DETAIL">There are no Twitter accounts configured. You can add or create a Twitter account in Settings</string>
    <string name="DIALOG_CONFIG_MAIL_REQUIRED">Please configure your mail in setting</string>
    <string name="DIALOG_COPY_DONE">Copy done</string>
    <string name="DIALOG_RECORDED_SOUND_REMOVED">Recorded sound is removed</string>
    <string name="DIALOG_INPUT_DOWNLOAD_CODE">Input download code</string>
    <string name="DIALOG_USE_AMAZON_AS_STORAGE">Use Amazon Cloud as storage</string>
    <string name="DIALOG_SYMBOL_NOT_SUPPORTED_BY_FONT">Symbol could possibly not be supported by selected font, please check</string>
    <string name="DIALOG_ERROR_WHEN_PARSING_ANSWER_JSON">Error when parsing answerTextContent.json</string>
    <string name="DIALOG_ERROR_WHEN_PARSING_QUESTION_JSON">Error when parsing questionTextContent.json</string>
    <string name="DIALOG_REACH_MAX_DOWNLOAD_LIMIT">You have reached the limit of downloads for this pack</string>
    <string name="DIALOG_UPLOAD_FAILURE">Failure to upload, please try again</string>
    <string name="DIALOG_PLAY_ONLY_SUPPORTED_IN_PLAY">Only supported in play mode</string>
    <string name="DIALOG_INPUT_ADMIN_PASSWORD">Input admin password</string>
    <string name="DIALOG_UPLOAD_SUCCESSFULLY">Pack successfully uploaded</string>
    <string name="Title_Copy_To_Clipboard">Copy to clipboard</string>
    <string name="DIALOG_NETWORK_TIMEOUT">Network timeout, please try again</string>
    <string name="DIALOG_NO_TWITTER_CLIENT_INSTALLED">Share is allowed only when Twitter app is installed</string>
    <string name="DIALOG_DECRYPT_FAILED">Decrypt failed</string>
    <string name="DIALOG_DOWNLOAD_FAILED">Download failed</string>
    <string name="DIALOG_NOW_DECRYPTING">Now decrypting...</string>
    <string name="DIALOG_SOCIAL_MEDIA_LOG_OUT_SUCCESS">You have successfully signed out</string>
    <string name="DIALOG_SOCIAL_MEDIA_LOG_OUT_FAILURE">Failed, please try again later</string>
    <string name="DIALOG_SOCIAL_MEDIA_LOG_IN_SUCCESS">You have successfully signed in</string>
    <string name="DIALOG_SOCIAL_MEDIA_LOG_IN_FAILURE">Failed, please try again later</string>
    <string name="DIALOG_ACCOUNT_CREATED_SUCCESS">You have successfully created a new account</string>
    <string name="DIALOG_ACCOUNT_CREATED_FAILURE">Failed to create a new account</string>
    <string name="DIALOG_CREATE_ACCOUNT_ALERT_MESSAGE">Create a user name</string>
    <string name="DIALOG_ACCOUNT_USERNAME_HAS_BEEN_REGISTERED">The user name has been registered</string>
    <string name="DIALOG_ACCOUNT_USERNAME_LINKED_SUCCESSFULLY">Successfully</string>
    <string name="DIALOG_SOCIAL_MEDIA_SIGNUP_OR_SIGNIN_SUCCESS">You now are logged in</string>
    <string name="DIALOG_FAILURE_TO_CREATE_BUCKET">Failed to create a new bucket on AWS</string>
    <string name="DIALOG_ACCOUNT_USERNAME_EMPTY_ERROR">User name can not be empty</string>
    <string name="DIALOG_INVALID_USERNAME_OR_PASSWORD">Invalid ID or password</string>
    <string name="DIALOG_NO_PHOTO_GALLERIES_FOUND">No photo galleries found</string>
    <string name="DIALOG_UNSUPPORTED_IMAGE_SOURCE">Unsupported image source, please select another image</string>
    <string name="MAX_VIDEO_DURATION_REACHED">Max 30 seconds of video duration is support</string>
    <string name="DIALOG_ONLY_ALPHANUMBER_PERMITTED">Only alphanumeric characters are permitted</string>
    <string name="NavigationBarItem_Packs">Packs</string>
    <string name="NavigationBarItem_Create">Create</string>
    <string name="NavigationBarItem_Edit"> Edit </string>
    <string name="NavigationBarItem_Close">Close</string>
    <string name="NavigationBarItem_Delete">Delete</string>
    <string name="NavigationBarItem_More">More</string>
    <string name="NavigationBarItem_Save">Save</string>
    <string name="NavigationBarItem_More_RandomPlay">Random Play</string>
    <string name="NavigationBarItem_More_Help">Help</string>
    <string name="NavigationBarItem_More_About">About</string>
    <string name="Label_New_Pack_Name">New pack name</string>
    <string name="Label_Sidebar_Title">Side bar title</string>
    <string name="Label_Creator">Your name</string>
    <string name="Label_Admin_Password">Pack password</string>
    <string name="Label_Confirm_Admin_Password">Confirm Pack password</string>
    <string name="Job_Title">Name or title</string>
    <string name="Label_New_User">New User?</string>
    <string name="Label_Visit_Store">Videos</string>
    <string name="Label_Recently_Created">recently created</string>
    <string name="Label_Recently_Viewed">recently viewed</string>
    <string name="Title_Record_Start">Record</string>
    <string name="Title_Playback">Play</string>
    <string name="Title_Reading_Timer">Reading Timer</string>
    <string name="Optional_Install_From_The_Code">Install from the Code</string>
    <string name="Optional_Share_The_Pack">Share the Pack</string>
    <string name="Table_Item_TTS">Text to Speech</string>
    <string name="Table_Item_Show_Question_Only">Auto-Show Question Only</string>
    <string name="Table_Item_Amazon_Or_Dropbox">Use Dropbox Storage</string>
    <string name="Table_Item_Dropbox">Use Dropbox</string>
    <string name="Table_Item_Google_Drive">Use Google Drive</string>
    <string name="Table_Item_AWS">Use FFC Drive</string>
    <string name="Table_Item_Log_In_Social_Network">Sign in</string>
    <string name="Record_Introduction_Text">When you click “Record” you have a maximum of 30 seconds to record your message. \n\nClick “Stop” when ready to stop recording.\n\nYou can then click “Play” to hear it, or “Save” to save it to the card.</string>
</resources>