<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/actionbar_packs"
            android:icon="@drawable/pack_list"
            android:showAsAction="always"
            android:title="@string/NavigationBarItem_Packs">
    </item>
    <item
            android:id="@+id/actionbar_edit"
            android:icon="@drawable/pack_edit"
            android:title="@string/NavigationBarItem_Edit"
            android:showAsAction="always">
    </item>
    <item
            android:id="@+id/actionbar_add_pack"
            android:icon="@drawable/pack_add"
            android:title="@string/NavigationBarItem_Create" android:showAsAction="always">
    </item>


    <item
            android:id="@+id/actionbar_change_template_color"
            android:icon="@drawable/template_background_change_button"
            android:title="Change" android:showAsAction="always">
    </item>

    <item
            android:id="@+id/actionbar_help"
            android:icon="@drawable/helping_button"
            android:title="@string/NavigationBarItem_More_Help" android:showAsAction="always">
    </item>

    <item
            android:id="@+id/actionbar_more"
            android:icon="@drawable/setting_button"
            android:title="@string/NavigationBarItem_More" android:showAsAction="always">
    </item>

    <item
            android:icon="@drawable/share_button"
            android:title="Share" android:showAsAction="always">

        <menu>
            <item
                    android:id="@+id/actionbar_install_from_code"
                    android:title="@string/Optional_Install_From_The_Code" />
            <item
                    android:id="@+id/actionbar_share_pack"
                    android:title="@string/Optional_Share_The_Pack" />
        </menu>

    </item>

    <item
        android:id="@+id/actionbar_play"
        android:title="Play"
        android:icon="@drawable/play_revised_round"
        android:showAsAction="always">
    </item>


</menu>