<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:background="#252525">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/top_layout"
        >

        <Button
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:textSize="14sp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:text="@string/NavigationBarItem_Close"
            android:background="@drawable/selector_button_simple_line"
            android:id="@+id/close_button" />

        <Button
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:textSize="14sp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="@string/NavigationBarItem_Delete"
            android:background="@drawable/selector_button_simple_line"
            android:id="@+id/delete_button" />


    </RelativeLayout>

    <Button
        android:layout_marginTop="50dp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/Title_Record_Start"
        android:textSize="14sp"
        android:background="@drawable/selector_button_simple_line_round"
        android:id="@+id/record_button" />


    <TextView
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:gravity="top|center_horizontal"
        android:textSize="12sp"
        android:text="@string/Record_Introduction_Text"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/descripton_textview"></TextView>




    <RelativeLayout
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/playsavebackground_layout"
        >

        <Button
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:textSize="14sp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:text="@string/Title_Playback"
            android:layout_marginBottom="10dp"
            android:background="@drawable/selector_button_simple_line"
            android:id="@+id/play_button" />

        <Button
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:textSize="14sp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="@string/NavigationBarItem_Save"
            android:layout_marginBottom="10dp"
            android:background="@drawable/selector_button_simple_line"
            android:id="@+id/save_button" />


    </RelativeLayout>



</LinearLayout>