<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_height="fill_parent"
              android:layout_width="fill_parent"
              android:background="#252525"
              android:orientation="vertical">

    <include layout="@layout/dialog_header"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:layout_marginTop="5dp"
                android:id="@+id/fragment_add_pack_pack_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:imeOptions="actionDone|flagNoExtractUi"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:hint="@string/Label_New_Pack_Name"
                android:textSize="@dimen/add_pack_edit_text_size"
                android:ems="10">
                <requestFocus/>
            </EditText>

            <EditText
                android:layout_marginTop="5dp"
                android:id="@+id/fragment_add_pack_sidebar_title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:imeOptions="actionDone|flagNoExtractUi"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/add_pack_edit_text_size"
                android:hint="@string/Label_Sidebar_Title"
                android:ems="10"/>


            <EditText
                android:layout_marginTop="5dp"
                android:id="@+id/fragment_add_pack_creator"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:imeOptions="actionDone|flagNoExtractUi"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/add_pack_edit_text_size"
                android:hint="@string/Label_Creator"
                android:ems="10"/>

            <EditText
                android:layout_marginTop="5dp"
                android:id="@+id/fragment_add_pack_job_title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:imeOptions="actionDone|flagNoExtractUi"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/add_pack_edit_text_size"
                android:hint="@string/Job_Title"
                android:ems="10"/>

            <EditText
                android:layout_marginTop="5dp"
                android:id="@+id/fragment_add_pack_admin_password"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:imeOptions="actionDone|flagNoExtractUi"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/add_pack_edit_text_size"
                android:hint="@string/Label_Admin_Password"
                android:ems="10"/>

            <EditText
                android:layout_marginTop="5dp"
                android:id="@+id/fragment_add_pack_confirm_admin_password"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:imeOptions="actionDone|flagNoExtractUi"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/add_pack_edit_text_size"
                android:hint="@string/Label_Confirm_Admin_Password"
                android:ems="10"/>

            <include
                layout="@layout/create_edit_pack_seek_bar"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:textSize="12sp"
                android:text="@string/Title_Reading_Timer"
                android:gravity="top|center_horizontal"
                android:textColor="@android:color/white"/>

        </LinearLayout>

        <FrameLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/fragment_add_pack_coverImage"
                android:layout_gravity="center"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:riv_corner_radius="15dp"
                android:background="@drawable/shape_image_round_corner"
                android:src="@drawable/default_pack_cover_image"/>

        </FrameLayout>

    </LinearLayout>

</LinearLayout>