<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black"
    android:scrollbars="none">



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <View
            style="@style/h_line"/>

        <RelativeLayout
            style="@style/option_item_rl" >

            <TextView
                style="@style/option_item_text_parent"
                android:text= "@string/NavigationBarItem_More_RandomPlay"
                android:textColor="@android:color/white"
                android:textSize="16dp" />

            <com.flipflash.UI.togglebutton.ToggleButton
                android:layout_marginRight="15dp"
                android:id="@+id/random_play_toggle_button"
                style="@style/option_item_toggleButton"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <View
            style="@style/h_line"/>

        <RelativeLayout
            style="@style/option_item_rl" >

            <TextView
                style="@style/option_item_text_parent"
                android:text="@string/Table_Item_Mute_Sound_Recording"
                android:textColor="@android:color/white"
                android:textSize="16dp" />

            <com.flipflash.UI.togglebutton.ToggleButton
                android:layout_marginRight="15dp"
                android:id="@+id/mute_sound_recording_toggle_button"
                style="@style/option_item_toggleButton"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <View
            style="@style/h_line" />

        <RelativeLayout
            android:id="@+id/rl_about"
            style="@style/option_item_rl" >

            <TextView
                style="@style/option_item_text_parent"
                android:text= "@string/NavigationBarItem_More_About"
                android:textColor="@android:color/white"
                android:textSize="16dp" />
        </RelativeLayout>


        <View
            style="@style/h_line"/>

        <RelativeLayout
            style="@style/option_item_rl" >

            <TextView
                style="@style/option_item_text_parent"
                android:text="@string/Table_Item_TTS"
                android:textColor="@android:color/white"
                android:textSize="16dp" />

            <com.flipflash.UI.togglebutton.ToggleButton
                android:layout_marginRight="15dp"
                android:id="@+id/text_to_speech_toggle_button"
                style="@style/option_item_toggleButton"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <View
            style="@style/h_line"/>

        <RelativeLayout
            style="@style/option_item_rl" >

            <TextView
                style="@style/option_item_text_parent"
                android:text="@string/Table_Item_Show_Question_Only"
                android:textColor="@android:color/white"
                android:textSize="16dp" />

            <com.flipflash.UI.togglebutton.ToggleButton
                android:layout_marginRight="15dp"
                android:id="@+id/auto_show_question_only_toggle_button"
                style="@style/option_item_toggleButton"
                android:layout_alignParentRight="true" />
        </RelativeLayout>


        <View
            style="@style/h_line" />


        <include

            android:layout_gravity="center_horizontal|bottom"
            layout="@layout/countdown_seek_bar_in_setting"
            android:layout_width="fill_parent"
            android:layout_height="50dp" />


        <View
            style="@style/h_line" />



        <RelativeLayout
            style="@style/option_item_rl" >

            <TextView
                style="@style/option_item_text_parent"
                android:text="@string/Table_Item_Amazon_Or_Dropbox"
                android:textColor="@android:color/white"
                android:textSize="16dp" />

            <com.flipflash.UI.togglebutton.ToggleButton
                android:layout_marginRight="15dp"
                android:id="@+id/storage_provider_toggle_button"
                style="@style/option_item_toggleButton"
                android:layout_alignParentRight="true" />
        </RelativeLayout>



        <View
            style="@style/h_line" />

        <RelativeLayout
            android:id="@+id/rl_social_account"
            style="@style/option_item_rl" >

            <TextView
                android:id="@+id/random_play_social_account_textview"
                style="@style/option_item_text_parent"
                android:text= "@string/Table_Item_Log_In_Social_Network"
                android:textColor="@android:color/white"
                android:textSize="16dp" />
        </RelativeLayout>


        <View
            style="@style/h_line" />




    </LinearLayout>

</ScrollView>