<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:background="@drawable/shape_dialog_background"
        android:layout_height="fill_parent">

    <include layout="@layout/dialog_header"/>

    <com.flipflash.UI.SmoothGallery
        android:id="@+id/pack_list_gallery"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:gravity="center_vertical"
             android:spacing="16dp"
            />

    <RelativeLayout
        android:layout_height="50dp"
        android:layout_marginBottom="0dp"
        android:layout_width="match_parent">

        <Button
        android:id="@+id/new_user_btn"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:textSize="12sp"
        android:layout_gravity="left|bottom"
        android:layout_marginLeft="10dp"
        android:background="@null"
        style="@style/BlackButtonText"
        android:text="@string/Label_New_User"/>

        <Button
            android:id="@+id/visit_store_btn"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:layout_toRightOf="@id/new_user_btn"
            android:layout_marginLeft="10dp"
            android:background="@null"
            style="@style/BlackButtonText"
            android:text="@string/Label_Visit_Store"/>

        <LinearLayout
            android:layout_width="290dp"
            android:layout_alignParentRight="true"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:textSize="12sp"
                android:tag="0"
                android:gravity="center|right"
                android:layout_marginRight="0dp"
                android:background="@null"
                style="@style/BlackButtonText"
                android:visibility="invisible"
                android:text="Sorted by "/>


            <TextView
                android:id="@+id/sort_created"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:textSize="12sp"
                android:tag="0"
                android:gravity="center|right"
                android:layout_marginRight="5dp"
                android:background="@null"
                style="@style/BlackButtonText"
                android:text="@string/Label_Recently_Created"/>

            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:textSize="12sp"
                android:tag="0"
                android:gravity="center"
                android:layout_marginRight="0dp"
                android:background="@null"
                style="@style/BlackButtonText"
                android:text=" | "/>

            <TextView
                android:id="@+id/sort_viewed"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:textSize="12sp"
                android:tag="1"
                android:gravity="center|right"
                android:layout_marginRight="5dp"
                android:background="@null"
                style="@style/BlackButtonText"
                android:text="@string/Label_Recently_Viewed"/>



            </LinearLayout>


    </RelativeLayout>

</LinearLayout>