<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@android:color/black"
            android:scrollbars="none">



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >


        <View
            style="@style/h_line" />

        <RelativeLayout
            android:id="@+id/rl_storage_option_dropbox"
            style="@style/option_item_rl" >

            <TextView
                style="@style/option_item_text_parent"
                android:text= "@string/Table_Item_Dropbox"
                android:textColor="@android:color/white"
                android:textSize="16dp" />

            <Button
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/check"
                    android:layout_marginRight="20dp"
                    android:layout_alignParentRight="true"
                    android:id="@+id/storage_option_dropbox_button"
                    android:layout_centerVertical="true" />

        </RelativeLayout>


        <View
        style="@style/h_line" />

        <RelativeLayout
            android:id="@+id/rl_storage_option_google_drive"
            style="@style/option_item_rl" >

            <TextView
                style="@style/option_item_text_parent"
                android:text= "@string/Table_Item_Google_Drive"
                android:textColor="@android:color/white"
                android:textSize="16dp" />

            <Button
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/check"
                android:layout_marginRight="20dp"
                android:layout_alignParentRight="true"
                android:id="@+id/storage_option_google_drive_button"
                android:layout_centerVertical="true" />

        </RelativeLayout>


        <View
            style="@style/h_line" />

        <RelativeLayout
            android:id="@+id/rl_storage_option_aws"
            style="@style/option_item_rl" >

            <TextView
                style="@style/option_item_text_parent"
                android:text= "@string/Table_Item_AWS"
                android:textColor="@android:color/white"
                android:textSize="16dp" />

            <Button
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/check"
                android:layout_marginRight="20dp"
                android:layout_alignParentRight="true"
                android:id="@+id/storage_option_aws_button"
                android:layout_centerVertical="true" />

        </RelativeLayout>



    </LinearLayout>

</ScrollView>